k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-aks
spec:
  selector:
    matchLabels:
      app: hello-aks
  template:
    metadata:
      labels:
        app: hello-aks
    spec:
      containers:
      - name: hello-aks
        image: paulbouwer/hello-kubernetes:1.8
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
