k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-aks-svc
spec:
  type: LoadBalancer
  selector:
    app: hello-aks-svc
  ports:
  - port: 80
    targetPort: 8080
